@@ -1,14 +1,18 @@
 package com.tirashop.service;
 
 import com.tirashop.dto.ReviewDTO;
+import com.tirashop.model.PagedData;
 import com.tirashop.persitence.entity.Product;
 import com.tirashop.persitence.entity.Review;
 import com.tirashop.persitence.entity.User;
 import com.tirashop.persitence.repository.ProductRepository;
 import com.tirashop.persitence.repository.ReviewRepository;
 import com.tirashop.persitence.repository.UserRepository;
+import com.tirashop.persitence.specification.ReviewSpecification;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -30,6 +34,41 @@ public class ReviewService {
     private final ProductRepository productRepository;
 
     private static final String REVIEW_IMAGE_DIR = System.getProperty("user.dir") + "/uploads/review";
+
+
+    public PagedData<ReviewDTO> searchReview(Integer rating, String username, Pageable pageable) {
+        var reviewSpec = ReviewSpecification.searchReview(rating, username);
+        var reviewPage = reviewRepository.findAll(reviewSpec, pageable);
+
+        var reviewItem = reviewPage.stream().map(
+                this::toDTO // Hàm chuyển từ entity sang DTO
+        ).toList();
+
+        return PagedData.<ReviewDTO>builder()
+                .pageNo(reviewPage.getNumber())
+                .totalPages(reviewPage.getTotalPages())
+                .totalElements(reviewPage.getTotalElements())
+                .elementPerPage(reviewPage.getSize())
+                .elementList(reviewItem)
+                .build();
+    }
+    private ReviewDTO toDTO(Review review) {
+        return ReviewDTO.builder()
+                .id(review.getId())
+                .productId(review.getProduct() != null ? review.getProduct().getId() : null)
+                .productName(review.getProduct() != null ? review.getProduct().getName() : null)
+                .userId(review.getUser() != null ? review.getUser().getId() : null)
+                .username(review.getUser() != null ? review.getUser().getUsername() : null)
+                .rating(review.getRating())
+                .reviewText(review.getReview())
+                .image(review.getImage())
+                .createdAt(review.getCreatedAt())
+                .updateAt(review.getUpdatedAt())
+                .build();
+    }
+
+
+
 
     public ReviewDTO addReview(Long productId, String username, int rating, String reviewText, MultipartFile image) {
         // 1. Xác thực người dùng
@@ -67,7 +106,8 @@ public class ReviewService {
                 rating,
                 reviewText,
                 imageUrl,
-                review.getCreatedAt()
+                review.getCreatedAt(),
+                review.getUpdatedAt()
         );
     }
 
@@ -79,54 +119,54 @@ public class ReviewService {
         reviewRepository.deleteById(id);
         return true;
     }
-    public List<ReviewDTO> getReviewsByProductId(Long productId) {
+    public PagedData<ReviewDTO> getReviewsByProductId(Long productId, Pageable pageable) {
         // Kiểm tra sản phẩm có tồn tại hay không
         if (!productRepository.existsById(productId)) {
             throw new RuntimeException("Product not found with ID: " + productId);
         }
 
-        // Lấy danh sách review của sản phẩm
-        List<Review> reviews = reviewRepository.findByProduct_Id(productId);
+        // Lấy danh sách review theo product ID và phân trang
+        Page<Review> reviewPage = reviewRepository.findByProduct_Id(productId, pageable);
 
-        // Chuyển đổi từ `Review` entity sang `ReviewDTO`
-        return reviews.stream()
-                .map(review -> new ReviewDTO(
-                        review.getId(),
-                        review.getProduct().getId(),
-                        review.getProduct().getName(),
-                        review.getUser().getId(),
-                        review.getUser().getUsername(),
-                        review.getRating(),
-                        review.getReview(),
-                        review.getImage(),
-                        review.getCreatedAt()
-                ))
-                .collect(Collectors.toList());
+        // Chuyển đổi từ entity sang DTO
+        List<ReviewDTO> reviewList = reviewPage.stream()
+                .map(this::toDTO)
+                .toList();
+
+        // Trả về dữ liệu phân trang
+        return PagedData.<ReviewDTO>builder()
+                .pageNo(reviewPage.getNumber())
+                .totalPages(reviewPage.getTotalPages())
+                .totalElements(reviewPage.getTotalElements())
+                .elementPerPage(reviewPage.getSize())
+                .elementList(reviewList)
+                .build();
     }
 
-    public List<ReviewDTO> getReviewsByUser(String username) {
-        // Kiểm tra người dùng tồn tại
+
+    public PagedData<ReviewDTO> getReviewsByUser(String username, Pageable pageable) {
+        // Kiểm tra user tồn tại
         User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new RuntimeException("User not found with username: " + username));
 
-        // Lấy danh sách review của người dùng
-        List<Review> reviews = reviewRepository.findByUser_Id(user.getId());
+        // Lấy danh sách review theo user ID và phân trang
+        Page<Review> reviewPage = reviewRepository.findByUser_Id(user.getId(), pageable);
 
-        // Chuyển đổi từ `Review` entity sang `ReviewDTO`
-        return reviews.stream()
-                .map(review -> new ReviewDTO(
-                        review.getId(),
-                        review.getProduct().getId(),
-                        review.getProduct().getName(),
-                        review.getUser().getId(),
-                        review.getUser().getUsername(),
-                        review.getRating(),
-                        review.getReview(),
-                        review.getImage(),
-                        review.getCreatedAt()
-                ))
-                .collect(Collectors.toList());
+        // Chuyển đổi từ entity sang DTO
+        List<ReviewDTO> reviewList = reviewPage.stream()
+                .map(this::toDTO)
+                .toList();
+
+        // Trả về dữ liệu phân trang
+        return PagedData.<ReviewDTO>builder()
+                .pageNo(reviewPage.getNumber())
+                .totalPages(reviewPage.getTotalPages())
+                .totalElements(reviewPage.getTotalElements())
+                .elementPerPage(reviewPage.getSize())
+                .elementList(reviewList)
+                .build();
     }
+
 
 
     // Hàm xử lý upload ảnh
